<resources>
    <string name="app_name">Regularly Remastered</string>
    <string name="save_task">Save Task</string>
    <string name="cancel">Cancel</string>
    <string name="add_completion">Log Completion</string>
    <string name="task_name_placeholder">Task Name</string>
    <string name="description_placeholder">Description</string>
    <string name="completions_list">Log</string>
    <string name="initial_due_date">Initial Due Date</string>
    <string name="next_due_date">Next Due Date</string>
    <string name="select_date">Select Date</string>
    <string name="delete_occurrence_dialog_title">Delete this completion?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="due_today">due today</string>
    <string name="due_tomorrow">due tomorrow</string>
    <string name="due_in_n_days">due in %1$d days</string>
    <string name="due_one_day_ago">due yesterday</string>
    <string name="due_n_days_ago">due %1$d days ago</string>
    <string name="done_after_baseline_days">baseline</string>
    <plurals name="done_after_n_days">
        <item quantity="one">done %1$d day later</item>
        <item quantity="other">done %1$d days later</item>
    </plurals>
    <string name="edit">edit</string>
    <string name="settings_title">Settings</string>
    <string name="period">Period (days)</string>
    <string name="delete">delete</string>
    <string name="delete_task_dialog_title">Delete this task?</string>
    <string name="notification_time_name">Notification time</string>
    <string name="notification_time_description">Time of day to send notification</string>
    <string name="select_time">Select time</string>
    <string name="notification_channel_name">Task Notifications</string>
    <string name="notification_channel_description">Tasks that are due will send a notification here.</string>
    <string name="notification_action_mark_as_done">Mark done</string>
    <string name="notification_frequency_name">Notification frequency</string>
    <string name="notification_frequency_description">Frequency of notifications. Tap to change.</string>
    <string name="next_notification_date">Next Notification Date</string>
    <string name="notification_time">Notification Time</string>
    <string name="override_global_notification_time">Override global notification time</string>
    <string name="backup_setting_title">Backup</string>
    <string name="backup_setting_description">Tap to backup the database now</string>
    <string name="enable_individual_task_notification">Enable notifications for this task</string>
    <string name="licenses_settings_title">Licenses</string>
    <string name="licenses_settings_description">Tap here for license information</string>
    <string name="dialog_ok">@android:string/ok</string>
    <string name="widget_description">Show tasks in a widget</string>
    <string name="widget_empty">No tasks yet</string>
</resources>
