<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beyondnull.flexibletodos.activity.EditTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- https://github.com/material-components/material-components-android/blob/master/docs/components/TopAppBar.md#navigation-icon-attributes -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_edit_task"
            app:title=""
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/task_name_placeholder"
                    android:inputType="textCapSentences|textAutoCorrect" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/periodEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/period"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/initialDueEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/initial_due_date"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nextDueEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/next_due_date"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description_placeholder"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/enableIndividualTaskNotifications"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:text="@string/enable_individual_task_notification" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/overrideGlobalNotificationTimeSwitch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:text="@string/override_global_notification_time" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notificationTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/notification_time"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/saveTaskButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:text="@string/save_task" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>