<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beyondnull.flexibletodos.activity.ViewTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- https://github.com/material-components/material-components-android/blob/master/docs/components/TopAppBar.md#navigation-icon-attributes -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_view_task"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="placeholder"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/task_name_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/period">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/periodEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:hint="@string/next_due_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nextDueEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:focusable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:hint="@string/next_notification_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nextNotificationEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:focusable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_placeholder"
            android:alpha="1.0">

            <!-- TODO: (P3) Make my own styling for a TextView for this page, so I don't have
            to hack the TextInput into scrolling with enabled:true. Then can use
            https://stackoverflow.com/a/3256305 to scroll -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="7"
                android:scrollbars="vertical"
                android:enabled="true"
                android:alpha="@dimen/m3_comp_outlined_text_field_disabled_input_text_opacity"
                android:color="@macro/m3_comp_outlined_text_field_disabled_input_text_color"
                android:focusable="false"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_placeholder">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="7"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- RecyclerView to display completions -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/completions_list"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/addCompletionButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add_completion" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/completionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>